@@ -27,9 +27,9 @@ Build-Depends: debhelper (>= 10~),
                libhiredis-dev,
                libriemann-client-dev (>= 1.6.0~),
                librabbitmq-dev,
-               python, python-dev, pep8, pylint, dh-python,
+               python3, python3-dev, pep8, pylint3, dh-python,
                dh-exec (>= 0.13~),
-               python-nose, python-ply,
+               python3-nose, python3-ply,
                libxml2-utils, geoip-database,
                libmaxminddb-dev,
                libcurl4-openssl-dev,
@@ -94,7 +94,7 @@ Section: libdevel
 Architecture: any
 Depends: syslog-ng-core (= ${binary:Version}),
  ${misc:Depends}, ${perl:Depends},
- pkg-config, perl, flex, bison, python,
+ pkg-config, perl, flex, bison, python3,
  libglib2.0-dev, libivykis-dev (>= 0.30)
 Description: Enhanced system logging daemon (development files)
  syslog-ng is an enhanced log daemon, supporting a wide range of input
@@ -388,7 +388,7 @@ Description: Enhanced system logging daemon (graphite plugin)
 Package: syslog-ng-mod-python
 Architecture: any
 Multi-Arch: foreign
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, syslog-ng-core (>= ${source:Version}), syslog-ng-core (<< ${source:Version}.1~)
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python3:Depends}, syslog-ng-core (>= ${source:Version}), syslog-ng-core (<< ${source:Version}.1~)
 XB-Python-Version: ${python:Versions}
 Description: Enhanced system logging daemon (Python plugin)
  syslog-ng is an enhanced log daemon, supporting a wide range of input
