@@ -6,6 +6,9 @@
 ## Released under the GPLv2+, see /usr/share/common-licenses/GPL-2 on
 ## Debian systems.
 
+# Uncomment this to turn on verbose mode.
+#export DH_VERBOSE=1
+
 # For my own sanity, when debian/rules is ran without any argument,
 # display something meaningful, instead of just running the first
 # override.
@@ -98,6 +101,7 @@ override_dh_auto_configure:
 		--enable-amqp \
 		$(PACCT_CONFIGURE_OPTS) \
 		--enable-python \
+		--with-python=3 \
 		\
 		--with-mongoc=system \
 		--with-ivykis=system \
@@ -125,6 +129,9 @@ override_dh_auto_install:
 		PYSETUP_OPTIONS="--install-layout=deb \
 		--root=$(CURDIR)/debian/tmp/"
 	find . -name \*.la | xargs --no-run-if-empty rm
+	[ ! -f $(CURDIR)/debian/tmp/usr/share/syslog-ng/tools/merge-grammar.py ] || \
+		sed -i 's/ python$$/ python3/' \
+		$(CURDIR)/debian/tmp/usr/share/syslog-ng/tools/merge-grammar.py
 
 # To get better test results, and actually see failing tests, we need
 # to pass VERBOSE=1 to make when running the tests. Do that here.
@@ -204,4 +211,4 @@ build-indep: ;
 
 # And for the rest, there is debhelper!
 %:
-	dh $@ --with autoreconf,systemd,python2
+	dh $@ --with autoreconf,systemd,python3
